# tsunami-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: configurations.py  runner.py
src/models/: result.py
src/templates/: tasks.py
src/treds_tsunami_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tsunami_benchmark/: runner.py
src/tsunami_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tsunami_benchmark/models/: configuration.py  result.py
src/tsunami_benchmark/templates/: tasks.py
tests/: test_runner.py
