[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treds_tsunami_benchmark"
version = "0.1.0"
authors = [
  { name="Manuel Gallina", email="manuel.gallina@3ds.team" },
]
description = "Utility library to stress test services"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp >= 3.8.4"
]