[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsunami_benchmark"
version = "0.4.2"
authors = [
  { name="Manuel Gallina", email="manuel.gallina@3ds.team" },
]
description = "Python package to perform stress tests"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp ~= 3.8.4"
]